# fastapi-template

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yaml
migrations/: env.py
migrations/versions/: 8bf81d788c31_auth_user.py
scripts/: uvicorn.sh
src/: main.py
src/config/: application.py  settings.py
src/config/routers/: __init__.py  services.py  v1.py
src/core/: exceptions.py
src/core/api/exceptions/: details.py  handlers.py
src/core/api/exceptions/http/: __init__.py  common.py
src/core/dependencies/: db.py
src/core/dto/: __init__.py
src/core/tests/fixtures/: __init__.py  common.py  db.py  fastapi.py
src/core/tests/tests/: test_pytest_ok.py
src/core/tests/utils/: __init__.py  db.py
src/core/types/: repositories.py  singleton.py
src/core/types/enum/: db.py
src/db/: base.py  models.py  session.py  type_maps.py  types.py
src/modules/users/: dto.py  models.py  repositories.py
src/modules/users/routers/: __init__.py
